--- a/ex4_advanced_calculator/app/src/main/res/layout-port/basic_calculator.xml
+++ b/ex4_advanced_calculator/app/src/main/res/layout-port/basic_calculator.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.constraintlayout.widget.ConstraintLayout tools:ignore="MissingDefaultResource"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:ignore="MissingDefaultResource"
+    android:id="@+id/main_layout">
 
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="285dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_width="300dp"
+        android:layout_height="646dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/linear_layout_border"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
 
@@ -55,7 +56,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="75dp"
-            android:layout_margin="20dp"
             android:background="@drawable/linear_layout_border"
             android:orientation="horizontal">
 
@@ -169,16 +169,46 @@
                 android:textSize="20dp" />
         </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/linearLayoutclear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical">>
+
+            <Button
+                android:id="@+id/btnClear"
+                android:layout_width="298dp"
+                android:layout_height="match_parent"
+                android:text="Clear" />
+
+            <LinearLayout
+                android:id="@+id/MainLayout"
+                android:layout_width="match_parent"
+                android:layout_height="87dp"
+                android:orientation="horizontal"></LinearLayout>
+        </LinearLayout>
+
+        <!--add xml by the first option with include tag-->
+
+        <!--
+        <include
+            android:id="@+id/news_title"
+            layout="@layout/seek_bar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+        -->
+
     </LinearLayout>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="351dp"
-        android:layout_height="61dp"
+        android:layout_width="355dp"
+        android:layout_height="36dp"
         android:layout_margin="30dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:text="@string/exercise_2_simple_calculator"
+        android:text="exercise_4_advanced_calculator"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="23sp"
