--- a/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
+++ b/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
@@ -8,7 +8,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frag1"
-        class="com.example.ex5.Frag1"
+        class="com.example.ex5.FragA"
         android:layout_width="368dp"
         android:layout_height="408dp"
         android:layout_marginStart="4dp"
@@ -18,7 +18,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frag2"
-        class="com.example.ex5.Frag2"
+        class="com.example.ex5.FragB"
         android:layout_width="348dp"
         android:layout_height="407dp"
         android:layout_alignParentEnd="true"
