--- a/ex5- fragment/app/src/main/res/layout-port/activity_main.xml
+++ b/ex5- fragment/app/src/main/res/layout-port/activity_main.xml
@@ -9,7 +9,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragContainer"
-        class="com.example.ex5.Frag1"
+        class="com.example.ex5.FragA"
         android:layout_width="392dp"
         android:layout_height="726dp"
         app:layout_constraintBottom_toBottomOf="parent"
