--- a/ex5- fragment/app/src/main/res/layout/activity_main.xml
+++ b/ex5- fragment/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <fragment
         android:id="@+id/frag1"
-        class="com.example.ex5.Frag1"
+        class="com.example.ex5.FragA"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout="@layout/frag_1" />
