--- a/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
+++ b/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
@@ -9,6 +9,7 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frag1"
         class="com.example.ex5.FragA"
+        android:tag="FRAG1"
         android:layout_width="368dp"
         android:layout_height="408dp"
         android:layout_marginStart="4dp"
@@ -18,13 +19,15 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frag2"
-        class="com.example.ex5.FragB"
         android:layout_width="348dp"
         android:layout_height="407dp"
         android:layout_alignParentEnd="true"
         android:background="?android:attr/detailsElementBackground"
         android:tag="FRAG2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/frag1"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
