save result toggle between fragments.

--- a/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
+++ b/ex5- fragment/app/src/main/res/layout-land/activity_main.xml
@@ -19,6 +19,7 @@
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frag2"
+        class="com.example.ex5.FragB"
         android:layout_width="348dp"
         android:layout_height="407dp"
         android:layout_alignParentEnd="true"
