--- a/ex6-menuAndFragment/app/src/main/res/menu/setting.xml
+++ b/ex6-menuAndFragment/app/src/main/res/menu/setting.xml
@@ -4,7 +4,7 @@
 
     <group >
         <item
-            android:id="@+id/menuSettings"
+            android:id="@+id/menuSetting"
             android:icon="@drawable/icon_menu_settings"
             android:title="Settings"
             app:showAsAction="ifRoom" />
