--- a/ex7/app/src/main/res/layout/country_row_frag.xml
+++ b/ex7/app/src/main/res/layout/country_row_frag.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    tools:context=".CountryFragment">
+    android:id="@+id/country_row_frag">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/flagImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/australia" />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/flagImageView"
+        android:layout_width="60dp"
+        android:layout_height="50dp" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -44,8 +35,7 @@
             android:layout_marginVertical="1dp"
             android:layout_marginStart="4dp"
             android:layout_weight="1"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textStyle="bold" />
+            android:textColor="@color/purple_500" />
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
