--- a/ex7/app/src/main/res/layout/activity_main.xml
+++ b/ex7/app/src/main/res/layout/activity_main.xml
@@ -5,9 +5,9 @@
     android:id="@+id/mainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#33B5E6"
-    android:padding="10dp"
+    android:background="@color/purple_200"
     android:layoutDirection="ltr"
+    android:padding="10dp"
     tools:context=".MainActivity">
 
     <androidx.fragment.app.FragmentContainerView
