--- a/ex7/app/src/main/res/drawable/lines.xml
+++ b/ex7/app/src/main/res/drawable/lines.xml
@@ -6,7 +6,7 @@
 
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#33B5E6"/>
+            <solid android:color="#E91E63"/>
         </shape>
     </item>
 
