--- a/ex7/app/src/main/res/drawable/lines2.xml
+++ b/ex7/app/src/main/res/drawable/lines2.xml
@@ -6,7 +6,7 @@
 
     <item android:bottom="1dp">
         <shape android:shape="rectangle">
-            <solid android:color="#ffffff"/>
+            <solid android:color="#F1CDCD"/>
         </shape>
     </item>
 
